# SDM_exercises_GRP3

./: .gitignore  README.md
src/exercise1/: lab1_queries.sql
src/exercise2/: CMakeLists.txt  company_name.hpp  company_name_SoA.cpp  company_name_SoA.hpp  keyword.cpp  keyword.hpp  main.cpp  queries.cpp  queries.hpp  title.cpp  title.hpp  titleaos.cpp  titleaos.hpp
